# SwarmRL

./: .codecov.yml  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .traj_data.pt  CITATION.cff  CODEOWNERS  README.md  README.rst  dev-requirements.txt  myconfig.hpp  oribiters.py  pyproject.toml  requirements.txt  sample_sim.py  sample_simulation.py  setup.py  simulation_runner.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: coverage.yml  espresso.yml  lint.yaml  notify-website.yml  pytest.yml  python-package.yml  python_ci.yml
CI/: run_espresso_test_suite.py  run_espresso_test_suite.sh  test_all.py  testing.py
CI/ci_scripts/: _build_espresso.sh  _swarm_rl_install.sh
CI/espresso_tests/: CTestTestfile.cmake  test_full_simulation.py  test_genetic_deployment.py  test_rl_script.py  test_vision_cone_rl.py
CI/resobee_tests/: resobee_example.ipynb  resobee_example.py
CI/unit_tests/: context.py  test_bechinger_models.py  test_espresso.py  test_espresso_2d.py  test_harmonic_trap.py
EspressoMD/: espresso_md.py
SwarmRL/: README.rst  requirements.txt  setup.py
SwarmRL/examples/: simple_rl.py
SwarmRL/swarmrl/: __init__.py  interaction_model.py  interactionmodel.py  master.py
docs/source/: conf.py  index.rst
examples/: bee_submit.sh  find_center.py
find_center/test/: params_test.pick  params_test.txt
simulation_data/: Untitled.ipynb  actor_weights.txt  rewards.txt
swarmrl/: __init__.py  master.py
swarmrl/action_selection/: __init__.py  action_selector.py
swarmrl/actions/: __init__.py  (+2 more)
utils/: m1_install.rb
(+289 files in other folders)
